hard-gists/4431155/run.log
=== Docker Run Log for 4431155 ===
Started at: Mi 29. Okt 14:39:10 CET 2025

[2025-10-29 14:39:10] START: Running container for 4431155
[2025-10-29 14:39:10] SUCCESS: Container aedb6e16d6db6aeb21d8e158a37fe7fdc2ac3adf9b7cd2c243b4224011457925 started for 4431155
=== Container logs for 4431155 ===
  File "/snippet.py", line 13
    print 'Clicked!'
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4431155 ===
[2025-10-29 14:39:12] INFO: Container aedb6e16d6db6aeb21d8e158a37fe7fdc2ac3adf9b7cd2c243b4224011457925 has stopped
